--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AvisekApp24"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivity"
+
+
+        <activity android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.AvisekApp24">
             <intent-filter>
@@ -21,7 +22,22 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+
         </activity>
+
+
+        <activity android:name=".otherActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <action android:name="com.avisek.avisekapp24.otherActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+
     </application>
 
 </manifest>
